unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/traa_Status_Processor_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Designed to automate the transition of record statuses.</description>
    <label>traa Status Processor Rule</label>
    <pluralLabel>traa Status Processor Rules</pluralLabel>
</CustomObject>