unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Check_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>traa_Check_Special_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Extra field which can be used by objects for their any special condition</inlineHelpText>
    <label>Check Special Condition</label>
    <type>Checkbox</type>
</CustomField>