unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Override_source_condition__c.field-meta.xml
<CustomField>
    <fullName>traa_Override_source_condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want to override the check which checks old source value not equal to new source value</inlineHelpText>
    <label>Override source condition?</label>
    <type>Checkbox</type>
</CustomField>