unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>traa_Source_Field__c</fullName>
    <label>Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>