unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>traa_Source_Record_Type__c</fullName>
    <label>Source Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>