unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>traa_Target_Field__c</fullName>
    <label>Target Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>