unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/fields/traa_Target_Reference__c.field-meta.xml
<CustomField>
    <fullName>traa_Target_Reference__c</fullName>
    <label>Target Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>