unpackaged/main/default/objects/traa_Status_Processor_Rule__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>traa_Source_Field__c</columns>
    <columns>traa_Source_Record_Type__c</columns>
    <columns>traa_Source_SObject_Type__c</columns>
    <columns>traa_Source_Value__c</columns>
    <columns>traa_Target_Field__c</columns>
    <columns>traa_Target_Record_Type__c</columns>
    <columns>traa_Target_Reference__c</columns>
    <columns>traa_Target_Value__c</columns>
    <columns>traa_Check_Special_Condition__c</columns>
    <columns>traa_Override_source_condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
</ListView>